--- a/styles/donate.css
+++ b/styles/donate.css
@@ -10,7 +10,6 @@
     background-position: center;
 }
 header {
-    /* text-align: center; */
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -19,26 +18,205 @@ header {
     padding: 0px 200px;
 }
 .header-title {
-    color: #fff;
+    font-family: 'Inter';
+    color: #FFFFFF;
     font-size: 65px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.header-description {
+    font-family: 'Poppins';
+    color: #FFFFFF;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 30px;
+
+
+}
+.btn-primary {
+    font-family: 'Inter';
+    color: #FFFFFF;
+    background: #FF5959;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    padding: 10px 15px;
+    border: none;
+    height: 56px;
+    border-radius: 5px;
+}
+/* Main */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* Donate-Date Section */
+.donate-date {
+    text-align: center;
+}
+.donate-date .title {
+    font-family: 'Inter';
+    font-weight: 700;
+    font-size: 45px;
+    color: #121212;
+    margin-top: 130px;
+    margin-bottom: 20px;
+
+}
+.donate-date .description {
+    font-family: 'Poppins';
+    color: #707070;
+    font-size: 18px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+.donate-tk {
+    display: flex;
+    gap: 22px;
+    justify-content: center;
+    margin-bottom: 60px;
+   
+}
+.donate-tk .amount {
+    background: #FAFAFA;
+    font-family: 'Inter';
+    border-radius: 5px;
+    height: 123px;
+    padding: 44px 22px;
+}
+.donate-tk .active {
+    color: #FF5959;
+    background: #FFEEEE;
+    border: 2px solid #FF5959;
+}
+.amount h3 {
+    font-weight: 700;
+    font-size: 30px;
+    color: #707070;
+}
+.donate-manual-tk {
+    font-family: 'Poppins';
+    font-size: 18px;
+    color: #B3B3B3;
+    margin-bottom: 10px;
+}
+.donate-date hr {
+    margin: 0 auto;
+    width: 765px;
+    margin-bottom: 30px;
+}
+/* Section Donate Plan */
+.donate-plan {
+    margin-top: 130px;
+}
+.plan-title {
+    font-family: 'Inter';
+    color: #121212;
+    font-size: 45px;
     font-weight: 700;
     margin-bottom: 20px;
     text-align: center;
 }
-.header-description {
-    color: #fff;
-    font-size: 25px;
-    margin-bottom: 30px;
-    text-align: center;
+.plan-description {
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-size: 18px;
+    color: #707070;
+    width: 691px;
+    margin: 0 auto 50px;
     text-align: center;
 }
-.btn-primary {
-    color: #fff;
-    background: brown;
+.plans {
+    display: flex;
+    gap: 24px;
+}
+.plan {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
     border-radius: 5px;
+    padding: 30px;
+}
+.plan .title {
     font-weight: 700;
-    font-size: 24px;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+/* Depend Section & Survive Section */
+.depend {
+    margin-top: 131px;
+}
+.depend-your-donation {
+    display: flex;
+    gap: 83px;
+    align-items: center;
+}
+.depend-text .title, .survive-text .title {
+    font-family: 'Inter';
+    font-weight: 700;
+    font-size: 45px;
+    color: #121212;
+    margin-bottom: 20px;
+}
+.depend-text  .description, .survive-text .description {
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-size: 18px;
+    color: #707070;
+    margin-bottom: 20px;
+}
+.depend-text button, .survive-text button {
+    margin-top: 30px;
+}
+.depend img, .survive img {
+    width: 456px;
+    height: 477px;
+    border-radius: 5px;
+}
+/* Survive */
+.survive {
+    margin-top: 100px;
+}
+.need-us-to-survive {
+    display: flex;
+    gap: 94px;
+    align-items: center;
+}
+/* Update Section */
+.update {
+    margin-top: 130px;
+}
+.update .title {
+    font-family: 'Inter';
+    font-weight: 700;
+    font-size: 45px;
     text-align: center;
-    padding: 10px 15px;
-    border: none;
+    color: #121212;
+}
+.update .description {
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+    color: #707070;
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+.contact {
+    width: 809px;
+    height: 200px;
+    background: #FFF4D6;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.contact input[type="email"] {
+    width: 275px;
+    height: 48px;
+    top: 3518px;
+    background: #D9D9D9;
+    border-radius: 5px 0px 0px 5px;
 }
