--- a/styles/donate.css
+++ b/styles/donate.css
@@ -218,5 +218,49 @@ main {
     height: 48px;
     top: 3518px;
     background: #D9D9D9;
+    border: none;
     border-radius: 5px 0px 0px 5px;
+}
+input[type="email"]::placeholder {
+    font-weight: 500;
+    font-size: 16px;
+    color: #AA9F9F;
+    padding-left: 17px;
+}
+input[type="submit"] {
+    width: 157px;
+    height: 48px;
+    background: #FF5959;
+    border: none;
+    border-radius: 0px 5px 5px 0px;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    color: #FFFFFF;
+}
+/* Footer */
+footer {
+    margin-top: 130px;
+    background: #0B0D17;
+    height: 177px;
+}
+.footer-text {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    align-items: center;
+    justify-content: center;
+}
+.footer-text h1 {
+    font-family: 'Lobster';
+    font-weight: 400;
+    font-size: 36px;
+    letter-spacing: 0.5px;
+    color: #FF5959;
+    margin-top: 43px;
+}
+.footer-text p {
+    font-family: 'Manrope';
+    font-size: 14px;
+    color: #D9DBE1;
 }
